# DuckdbConvert

./: .gitignore  .gitmodules  CMakeLists.txt  README  SendDuckData.cpp  SendDuckType.cpp  duckdbconvert.hpp  send.cpp  typetest.cpp
